fixed horizontal scroller problem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,11 +10,15 @@
   padding: 0;
 }
 
+.container {
+  min-height: 100vh;
+  width: 100vw;
+}
 
 
 #intro_wrapper {
   background-color: aquamarine;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow-y: scroll;
   display: flex;
@@ -22,7 +26,13 @@
   align-items: center;
 }
 
+#intro_wrapper::-webkit-scrollbar {
+  display: none; 
+}
 
+#intro_wrapper {
+  scrollbar-width: 0px; 
+}
 #intro_image_wrapper {
   height: 100%;
   width: 100%;
@@ -32,3 +42,10 @@
   right: 0;
 }
 
+#intro_image_wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+#intro_image_wrapper {
+  scrollbar-width: 0px; 
+}
